fix: #13 fix text align

--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -7,7 +7,10 @@
 	gap: 20px;
 }
 
-
+.catalog__heading {
+  text-align: center;
+  margin-bottom: 40px;
+}
 
 .catalog__card-content {
 	background: var(--primary-white);
